test/fails/func_undef.imp.interpret
No function with the id "nosuchfunction" exists.
